# cmakeVcpkgTemplateVsCode

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.bat  prepare.bat  prepare.sh  vcpkg.json
Core/: CMakeLists.txt
Core/example_library/: CMakeLists.txt  example_lib.cpp  example_lib.hpp
app/: CMakeLists.txt  main.cpp
lib/my_lib/: CMakeLists.txt  my_lib.cpp
